k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lung-detection
  labels:
    app: lung-detection
